Compatibility with Java 9 (tested with Oracle JDK 9.0.1)